--- a/index.html
+++ b/index.html
@@ -145,5 +145,9 @@
             </form>
         </section>
     </main>
+
+    <footer class="footer">
+        <p class="footer--text">All Rights Reserved &copy; Dennis Terna 2021</p>
+    </footer>
 </body>
 </html>
