add favicon -add media query for desktop size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/android-icon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/android-icon-96x96.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,9 +15,9 @@
         <nav class="nav">
             <img src="./assets/logo.PNG" alt="logo" class="logo">
             <ul class="nav--list">
-                <li class="nav--list__item"><a href="#">Home</a></li>
-                <li class="nav--list__item"><a href="#">Projects</a></li>
-                <li class="nav--list__item"><a href="#">Contact</a></li>
+                <li class="nav--list__item"><a href="#" class="nav--link">Home</a></li>
+                <li class="nav--list__item"><a href="#" class="nav--link">Projects</a></li>
+                <li class="nav--list__item"><a href="#" class="nav--link">Contact</a></li>
             </ul>
         </nav>
         <div class="header--text">
