add me to contact

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="nav--list__item"><a href="#home" class="nav--link">Home</a></li>
                 <li class="nav--list__item"><a href="#aboutme" class="nav--link">About me</a></li>
                 <li class="nav--list__item"><a href="#projects" class="nav--link">Projects</a></li>
-                <li class="nav--list__item"><a href="#contact" class="nav--link">Contact</a></li>
+                <li class="nav--list__item"><a href="#contact" class="nav--link">Contact me</a></li>
             </ul>
         </nav>
         <div class="header--text">
